updated package json for yarn deploy

--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jameswordie.github.io/video-search"
+  "homepage": "https://jameswordie.github.io/react-youtube-ui"
 }
